name:                refs
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/refs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Class.Name
                     , Class.Type
                     , Data
                     , Data.Db
                     , Data.Db.Instances
                     , Refs
                     , Run
                     , Storage
                     , Storage.Db
                     , Storage.Db.Classes
                     , Storage.Db.Env
                     , Storage.Db.Schema
                     , Storage.Map
                     , Unique
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cereal
                     , containers
                     , lens
                     , monad-control
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , transformers
                     , transformers-base
  default-language:    Haskell2010

executable refs
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Class.Name
                     , Class.Type
                     , Data
                     , Data.Db
                     , Data.Db.Instances
                     , Refs
                     , Run
                     , Storage
                     , Storage.Db
                     , Storage.Db.Classes
                     , Storage.Db.Env
                     , Storage.Db.Schema
                     , Storage.Map
                     , Unique
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cereal
                     , containers
                     , lens
                     , mtl
                     , monad-control
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , transformers
                     , transformers-base
                     , tagged
                     , refs
